Change headings in snapshots

--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -204,8 +204,8 @@ title: "Crime in England and Wales: year ending December 2017"
             <div class="flex-grid">
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-                <h3 class="margin-top--0"><a href="#">Weapons Crime in England and Wales</a></h3>
-                <h4>Police recorded more crimes involving weapons, with knife crime in cities rising most</h4>
+                <h3 class="margin-top--0"><a href="../weapons-crime">Weapons Crime in England and Wales</a></h3>
+                <p class="font-weight--bold">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
                   <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
                 </div>
@@ -221,7 +221,7 @@ title: "Crime in England and Wales: year ending December 2017"
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
                 <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
-                <h4>The number of homicides has been impacted by recent terrorist attacks</h4>
+                <p class="font-weight--bold">The number of homicides has been impacted by recent terrorist attacks</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
                   <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
                 </div>
