--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -135,11 +135,11 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <p>Offences involving firearms increased by 11% (to 6,604) in the year ending December 2017, compared with the previous year (5,945 offences).</p>
-              <p class="heading-small">Police recorded:</p>
+              <p class="font-weight--bold margin-bottom--1">Police recorded a:</p>
               <ul>
-                <li>a 12% increase in offences involving handguns (accounting for 46% of the overall increase)</li>
-                <li>a 21% increase in offences involving unidentified firearms</li>
-                <li>a 20% increase in offences involving shotguns</li>
+                <li>12% increase in offences involving handguns (accounting for 46% of the overall increase)</li>
+                <li>21% increase in offences involving unidentified firearms</li>
+                <li>20% increase in offences involving shotguns</li>
               </ul>
               <p>NHS England hospital admissions data also shows increases firearm injuries. This rose from 109 admissions in the year ending March 2016 to 135 admissions in the year ending March 2017.</p>
               <p>London’s Air Ambulance Data also suggest an increase in serious offences involving a weapon. In 2017, injuries resulting from stabbings and shootings were the most common cause for a helicopter to be dispatched.</p>
@@ -161,8 +161,8 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             <div class="flex-grid">
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-                <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">Crime in England and Wales</a></h3>
-                <h4>While crime has fallen over the long-term, the short-term picture is more stable</h4>
+                <h3 class="margin-top--0"><a href="../crime-overview">Crime in England and Wales</a></h3>
+                <p class="font-weight--bold">While crime has fallen over the long-term, the short-term picture is more stable</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 8px 16px; background-color:white;">
                   <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
                 </div>
@@ -178,7 +178,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
                 <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
-                <h4>The number of homicides has been impacted by recent terrorist attacks</h4>
+                <p class="font-weight--bold">The number of homicides has been impacted by recent terrorist attacks</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
                   <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
                 </div>
