--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -99,7 +99,10 @@ title: "Crime in England and Wales: year ending December 2017"
                 <a href="#section-2">Data</a>
               </li>
               <li>
-                <a href="#section-3">Related</a>
+                <a href="#section-3">Need to know</a>
+              </li>
+              <li>
+                <a href="#section-4">Related</a>
               </li>
             </ul>
           </div>
@@ -175,21 +178,6 @@ title: "Crime in England and Wales: year ending December 2017"
             </div>
           </details>
 
-          <details role="group" class="margin-bottom--4 margin-top--1">
-            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary" style="font-size:18px;">How do we measure this?
-                <span class="visuallyhidden">
-                </span>
-            </summary>
-            <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="margin-top--0">This bulletin primarily reports on data from two main sources of crime data: the Crime Survey for England and
-                Wales (CSEW) and police recorded crime. </p>
-              <p class="margin-top--0">The
-                <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a> provides detailed information on the datasets used
-                to compile crime statistics.</p>
-            </div>
-          </details>
-
           <h2 id="section-2">Data</h2>
 
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View related data</a></p>
@@ -197,9 +185,42 @@ title: "Crime in England and Wales: year ending December 2017"
 
             <p>
               <a href="#section-1">Back to top</a>
-            </p>
+              </p>
 
-            <h2 id="#section-3">Related</h2>
+            <h2 id="section-3">Need to know</h2>
+
+            <div class="js-show-hide">
+              <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1 padding-bottom--0">
+                                How do we measure this?
+                              </h3>
+                </div>
+                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
+                  <p>This bulletin primarily reports on data from two main sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
+                  <p class="margin-top--0">The
+                    <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">user guide to crime statistics for England and Wales</a> provides detailed information on the datasets used
+                    to compile crime statistics.</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="js-show-hide">
+            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1 padding-bottom--0">
+                    Glossary
+                  </h3>
+                </div>
+                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
+                    <p><strong>Sharp instrument</strong><br />A sharp instrument is any object that pierces the skin (or in the case of a threat, is capable of piercing the skin), for example, a broken bottle.</p>
+                    <p><strong>Police area</strong><br />A police area is the area for which a territorial police force in the United Kingdom is responsible for policing.</p>
+                  </div>
+              </div>
+            </div>
+
+            <h2 id="#section-4">Related</h2>
 
             <div class="flex-grid">
 
@@ -220,7 +241,7 @@ title: "Crime in England and Wales: year ending December 2017"
               </div>
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-                <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
+                <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/homicideinenglandandwales/yearendingmarch2017">Homicide in England and Wales</a></h3>
                 <h4>The number of homicides has been impacted by recent terrorist attacks</h4>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
                   <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
