--- a/sprint/25/crime-overview/index.html
+++ b/sprint/25/crime-overview/index.html
@@ -226,7 +226,7 @@ title: "Crime in England and Wales: year ending December 2017"
               <a href="#section-1">Back to top</a>
               </p>
 
-            <h2 id="#section-4">Related</h2>
+            <h2 id="section-4">Related</h2>
 
             <div class="flex-grid">
 
@@ -234,7 +234,7 @@ title: "Crime in England and Wales: year ending December 2017"
                 <h3 class="margin-top--0"><a href="../weapons-crime">Weapons Crime in England and Wales</a></h3>
                 <p class="font-weight--bold">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
+                  <img style="width:100%" src="{{ "/assets/img/Increases_evident_in_police_recorded_offences_involving_a_knife_or_sharp_instrument_for_the_third_year.png" | relative_url }}" class="" alt="">
                 </div>
                 <details role="group" class="margin-bottom--2 margin-top--2">
                 <summary role="button" aria-controls="details-content-1" aria-expanded="true">
