--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -57,7 +57,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-top--2 padding-right--2 padding-bottom--3 padding-left--2">
             <p class="heading-small">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
-            <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
+            <img style="width:100%" src="{{ "/assets/img/Increases_evident_in_police_recorded_offences_involving_a_knife_or_sharp_instrument_for_the_third_year.png" | relative_url }}" class="" alt="">
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
@@ -95,7 +95,10 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                 <a href="#section-2">Data</a>
               </li>
               <li>
-                <a href="#section-3">Related</a>
+                <a href="#section-3">Need to know</a>
+              </li>
+              <li>
+                <a href="#section-4">Related</a>
               </li>
             </ul>
           </div>
@@ -148,15 +151,70 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
 
 
           <h2 id="section-2">Data</h2>
-
-          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View related data</a></p>
-
+          <p>A breakdown of offences for each police force and the time series for these data are published in the Home Office’s knife crime open data table.</p>
+          <p>Further analysis on offences involving knives or sharp instruments and firearms, including figures based on a broader definition of the types of firearm involved14, can be found in Offences involving the use of weapons: data tables. </p>
+          <p>See Homicide in England and Wales: Appendix tables for more information on homicides committed using a knife or sharp instrument.</p>
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all related data</a></p>
 
             <p>
               <a href="#section-1">Back to top</a>
             </p>
 
-            <h2 id="#section-3">Related</h2>
+
+            <h2 id="section-3">Need to know</h2>
+
+            <div class="js-show-hide">
+            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1 padding-bottom--0">
+                    What do you need to know about these numbers?
+                  </h3>
+                </div>
+                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
+                  <p>Police recorded crime data are not designated as National Statistics.</p>
+                  <p>While weapons crimes are relatively well recorded by the police, they can only provide a partial picture as not all offences will come to their attention.</p>
+                  <p>As offences involving the use of weapons are relatively low in volume, the Crime Survey for England and Wales (CSEW) is not able to provide reliable trends for such incidents.</p>
+                  <p>These increases reflect a real rise in the occurrence of these types of crime. It is likely that improvements in recording practices have partly contributed to these rises.</p>
+                  <p>Increases in targeted police action in relation to knife crime can also impact these numbers. This is most likely to occur when offences involving knives rise.</p>
+                  </div>
+              </div>
+            </div>
+
+            <div class="js-show-hide">
+              <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1 padding-bottom--0">
+                                How do we measure this?
+                              </h3>
+                </div>
+                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
+                  <p>Police recorded knife or sharp instrument offences data are submitted via an additional special collection. Proportions of offences involving the use of a knife or sharp instrument presented in this section are calculated based on figures submitted in this special collection. Other offences exist that are not shown in this section that may include the use of a knife or sharp instrument.</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="js-show-hide">
+            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <h3 class="heading-small padding-left--1 padding-top--0 margin-top--1 padding-bottom--0">
+                    Glossary
+                  </h3>
+                </div>
+                <div class="js-show-hide__content padding-left--1 padding-right--1 padding-bottom--1 padding-top--2 border-top--iron">
+                    <p><strong>Firearms</strong><br />Firearms include: shotguns; handguns; rifles; imitation weapons such as BB guns or soft air weapons; other weapons such as CS gas, pepper spray and stun guns; and unidentified weapons. They exclude conventional air weapons, such as air rifles.</p>
+                    <p><strong>Sharp instrument</strong><br />A sharp instrument is any object that pierces the skin (or in the case of a threat, is capable of piercing the skin), for example, a broken bottle.</p>
+                  </div>
+              </div>
+            </div>
+
+                  <br>
+
+            <p>
+              <a href="#section-1">Back to top</a>
+            </p>
+
+            <h2 id="section-4">Related</h2>
 
             <div class="flex-grid">
 
@@ -192,7 +250,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                 </details>
               </div>
             </div>
-
+            <br/>
             <p>
               <a href="#section-1">Back to top</a>
             </p>
@@ -203,6 +261,6 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         </div>
 
       </div>
-    
+
 
 </main>
