--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -57,7 +57,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-top--2 padding-right--2 padding-bottom--3 padding-left--2">
             <p class="heading-small">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
-            <img style="width:100%" src="{{ "/assets/img/Increases_evident_in_police_recorded_offences_involving_a_knife_or_sharp_instrument_for_the_third_year.png" | relative_url }}" class="" alt="">
+            <img style="width:100%" src="{{ "/assets/img/police_recorded_crime_2.png" | relative_url }}" class="" alt="">
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
@@ -222,7 +222,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                 <h3 class="margin-top--0"><a href="../crime-overview">Crime in England and Wales</a></h3>
                 <p class="font-weight--bold">While crime has fallen over the long-term, the short-term picture is more stable</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 8px 16px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/crime_curvey_chart.png" | relative_url }}" class="" alt="">
+                  <img style="width:100%" src="{{ "/assets/img/crime_survey_chart_2.png" | relative_url }}" class="" alt="">
                 </div>
                 <details role="group" class="margin-bottom--2 margin-top--2">
                 <summary role="button" aria-controls="details-content-1" aria-expanded="true">
@@ -235,7 +235,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
               </div>
 
               <div class="flex-col background--gallery padding-left--1 padding-right--1 padding-top--1 margin-bottom--2">
-                <h3 class="margin-top--0"><a href="#">Homicide in England and Wales</a></h3>
+                <h3 class="margin-top--0"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/homicideinenglandandwales/yearendingmarch2017">Homicide in England and Wales</a></h3>
                 <p class="font-weight--bold">The number of homicides has been impacted by recent terrorist attacks</p>
                 <div class="margin-bottom--2 margin-top--2" style="border:1px solid white; padding:8px 16px 16px 16px; background-color:white;">
                   <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
