--- a/prototypes.html
+++ b/prototypes.html
@@ -24,6 +24,13 @@ footer: false
         <li><a href="sprint/25/crime-overview">Bulletin: Crime overview (iteration 4)</a></li>
         <li><a href="sprint/25/homicide">Bulletin: Homicide (iteration 4)</a></li>
         <li><a href="sprint/25/offences-involving-weapons">Bulletin: Offences involving weapons (iteration 4)</a></li>
+        <li><a href="sprint/25/offences-involving-weapons">Bulletin: Offences involving weapons (iteration 4)</a></li>
+      </ul>
+
+      <h2>Sprint 26</h2>
+      <ul>
+        <li><a href="sprint/26/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/26/offences-involving-weapons">Weapons crime</a></li>
       </ul>
 
     </div>
