--- a/prototypes.html
+++ b/prototypes.html
@@ -30,7 +30,7 @@ footer: false
       <h2>Sprint 26</h2>
       <ul>
         <li><a href="sprint/26/crime-overview">Crime overview</a></li>
-        <li><a href="sprint/26/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/26/weapons-crime">Weapons crimes</a></li>
       </ul>
 
     </div>
