--- a/patterns.html
+++ b/patterns.html
@@ -46,6 +46,15 @@ footer: false
       <h2 id="section-10">Get all data</h2>
       {% include get-all-data.html %}
       {% include back-to-top.html %}
+      <h2 id="section-11">Quote</h2>
+      {% include quote.html %}
+      {% include back-to-top.html %}
+      <h2 id="section-12">Info alert</h2>
+      {% include info-alert.html %}
+      {% include back-to-top.html %}
+      <h2 id="section-13">Charts</h2>
+      {% include chart.html %}
+      {% include back-to-top.html %}
     </div>
   </div>
 </div>
