--- a/sprint/26/weapons-crime/index.html
+++ b/sprint/26/weapons-crime/index.html
@@ -5,7 +5,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: true
-title: "Crime in England and Wales: year ending December 2017"
+title: "Weapons Crime in England and Wales: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -21,10 +21,16 @@ title: "Crime in England and Wales: year ending December 2017"
                   <a class="breadcrumb__link" href="#">Home</a>
                 </li>
                 <li class="breadcrumb__item">
-                  <a class="breadcrumb__link" href="#">Bulletins</a>
+                  <a class="breadcrumb__link" href="#">People, population and community</a>
                 </li>
                 <li class="breadcrumb__item">
-                  {{ page.title }}
+                  <a class="breadcrumb__link" href="#">Crime and justice</a>
+                </li>
+                <li class="breadcrumb__item">
+                  <a class="breadcrumb__link" href="../crime-overview">Crime in England and Wales</a>
+                </li>
+                <li class="breadcrumb__item">
+                  Weapons Crime in England and Wales
                 </li>
               </ol>
             </div>
@@ -55,7 +61,7 @@ title: "Crime in England and Wales: year ending December 2017"
             <div class="release-data">
             <p class="font-xsmall panel">
             <span class="font-weight--bold">This is the latest release</span> |
-            <a href="" class="font-color--white font-xsmall white-link">View previous releases</a>
+            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall white-link">View previous releases</a>
           </p></div>
         </div>
       </div>
@@ -66,14 +72,14 @@ title: "Crime in England and Wales: year ending December 2017"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
-          <div class="padding-top--2 padding-right--2 padding-bottom--3 padding-left--2">
+          <div class="padding-right--2 padding-bottom--0 padding-left--2">
             <p class="heading-small">Police recorded more crimes involving weapons, with knife crime in cities rising most</p>
-            <img style="width:100%" src="{{ "/assets/img/police_recorded_crime_2.png" | relative_url }}" class="" alt="">
+            <iframe id="datawrapper-chart-cXkyA" src="//datawrapper.dwcdn.net/cXkyA/3/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100% !important;" height="300"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["cXkyA"]={},window.datawrapper["cXkyA"].embedDeltas={"100":400,"200":400,"300":400,"400":400,"500":400,"700":400,"800":400,"900":400,"1000":400},window.datawrapper["cXkyA"].iframe=document.getElementById("datawrapper-chart-cXkyA"),window.datawrapper["cXkyA"].iframe.style.height=window.datawrapper["cXkyA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["cXkyA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("cXkyA"==b)window.datawrapper["cXkyA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
           <p class="margin-bottom--2"><span class="font-xlarge font-weight--bold">63%</span> </br> of the increase in gun crime was driven by rises in London and Manchester.</p>
-          <details role="group" class="margin-bottom--4">
+          <details role="group" class="margin-bottom--4 details-small">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">More about this statistic<span class="visuallyhidden"></span></summary>
               <div class="panel" id="details-content-1" aria-hidden="false">
@@ -103,7 +109,7 @@ title: "Crime in England and Wales: year ending December 2017"
                 <a href="#section-3">Need to know</a>
               </li>
               <li>
-                <a href="#section-4">Related</a>
+                <a href="#section-4">In this release</a>
               </li>
               <li>
                 <a href="#section-5">Contact</a>
@@ -141,6 +147,30 @@ title: "Crime in England and Wales: year ending December 2017"
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <p>Police recorded "possession of an article with a blade or point" offences also rose, by 33%, to 17,437 offences. This is consistent with increases seen over the last four years, and the highest figure since the series began in the year ending March 2009.</p>
+
+              <h4>Increases evident in police recorded offences involving a knife or sharp instrument for the third year</h4>
+              <h5>England and Wales, year ending March 2011 to year ending December 2017</h5>
+              <iframe id="datawrapper-chart-cXkyA" src="//datawrapper.dwcdn.net/cXkyA/3/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100% !important;" height="400"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["cXkyA"]={},window.datawrapper["cXkyA"].embedDeltas={"100":400,"200":400,"300":400,"400":400,"500":400,"700":400,"800":400,"900":400,"1000":400},window.datawrapper["cXkyA"].iframe=document.getElementById("datawrapper-chart-cXkyA"),window.datawrapper["cXkyA"].iframe.style.height=window.datawrapper["cXkyA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["cXkyA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("cXkyA"==b)window.datawrapper["cXkyA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+
+              <h5>Source: Police recorded crime, Home Office</h5>
+              <h5>Notes:</h5>
+              <ol>
+              <li>Police recorded crime data are not designated as National Statistics.</li>
+              </ol>
+
+              <h5 class="margin-bottom--1">Download this chart</h5>
+              <div class="btn-group margin-bottom--4">
+                  <button class="btn btn--primary font-xsmall">
+                      Image
+                  </button>
+                  <button class="btn btn--primary font-xsmall">
+                      .CSV
+                  </button>
+                  <button class="btn btn--primary font-xsmall">
+                      .XLS
+                  </button>
+              </div>
+
             </div>
           </details>
 
@@ -230,15 +260,15 @@ title: "Crime in England and Wales: year ending December 2017"
               <a href="#section-1">Back to top</a>
             </p>
 
-            <h2 id="section-4">Related</h2>
+            <h2 id="section-4">In this release</h2>
             <div class="flex-grid">
               <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h3><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h3>
+                <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
                 <p>While crime has fallen over the long-term, the short-term picture is more stable</p>
-                <div class="margin-bottom--2" style="padding:8px 8px 8px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/crime_survey_chart_2.png" | relative_url }}" class="" alt="">
+                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                  <iframe id="datawrapper-chart-nNagi" src="//datawrapper.dwcdn.net/nNagi/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100%; min-width: 100% !important;" height="100%"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["nNagi"]={},window.datawrapper["nNagi"].embedDeltas={"100":440,"200":440,"300":440,"400":440,"500":440,"700":440,"800":440,"900":440,"1000":440},window.datawrapper["nNagi"].iframe=document.getElementById("datawrapper-chart-nNagi"),window.datawrapper["nNagi"].iframe.style.height=window.datawrapper["nNagi"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["nNagi"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("nNagi"==b)window.datawrapper["nNagi"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
                 </div>
-                <details role="group" class="margin-bottom--4">
+                <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
                     <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
@@ -248,12 +278,12 @@ title: "Crime in England and Wales: year ending December 2017"
               </div>
 
               <div class="flex-col background--gallery padding-left--2 padding-right--2">
-                <h3><a class="heading-medium" href="#">Homicide in England and Wales</a></h3>
+                <h4><a class="heading-medium" href="#">Homicide in England and Wales</a></h4>
                 <p>The number of homicides has been impacted by recent terrorist attacks</p>
                 <div class="margin-bottom--2" style="background-color:white;">
                   <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
                 </div>
-                <details role="group" class="margin-bottom--4">
+                <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
                     <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
