add content to pages

--- a/sprint/26/crime-overview/index.html
+++ b/sprint/26/crime-overview/index.html
@@ -57,7 +57,7 @@ title: "Crime in England and Wales: year ending December 2017"
             <br /></P>
             <div class="release-data">
             <p class="font-xsmall panel">
-            <span class="font-weight--bold">This is the latest release</span> |
+            <span class="font-weight--bold">This is part of the latest release</span> |
             <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall white-link">View previous releases</a>
           </p></div>
         </div>
@@ -115,7 +115,8 @@ title: "Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-three-quarters">
 
           <h2 id="section-1">Summary</h2>
-          <p class="heading-small">Crime estimated by Crime Survey for England and Wales (CSEW) shows crime overall has fallen in the last year,  driven by a 28% decline in computer misuse.</p>
+          <p class="heading-small">Crime overall has fallen in the last year</p>
+          <p>Crime estimated by Crime Survey for England and Wales (CSEW) shows crime overall has fallen in the last year,  driven by a 28% decline in computer misuse.</p>
           <p>Most individual types of crime, including violence, have stayed at levels similar to the previous year.</p>
           <p>When looking at the main types of crime, changes were only seen in:</p>
           <ul>
@@ -140,9 +141,11 @@ title: "Crime in England and Wales: year ending December 2017"
             <li>robbery (up 33% to 74,130 offences)</li>
             <li>homicides </li>
           </ul>
-          <p>There were 54 more homicides than the previous year, a 9% rise to 653, excluding exceptional incidents with multiple victims such as the such as the terrorist attacks in </p>
+          <p>There were 54 more homicides than the previous year, a 9% rise to 653, excluding exceptional incidents with multiple victims such as the such as the terrorist attacks in London and Manchester, and events at Hillsborough in 1989, which were recorded as homicides in last year’s figures.</p>
+          <p>Including these exceptional incidents the total number of homicides recorded by the police fell by 1% (to 688).</p>
 
-          <h3>  what is going on here???? Where is the rest of the copy?</h3>
+          <p class="heading-small">Likelihood of being a victim has fallen considerably</p>
+          <p>Around 4 in 10 adults were estimated to have been a victim of crime in 1995; before the survey included fraud and computer misuse in its coverage. In the year ending December 2017, just over 1 in 10 adults were a victim of crimes comparable with those measured in the 1995 survey. Including fraud and computer misuse, 2 in 10 adults were a victim of crime in the year ending December 2017.</p>
 
           <h2 id="section-2">Data</h2>
           <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
@@ -205,6 +208,21 @@ title: "Crime in England and Wales: year ending December 2017"
               </div>
             </div>
 
+            <div class="js-show-hide">
+            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title ">
+                  <p class="heading-small padding-left--2 margin-top--1 margin-bottom--1">
+                    National Statistic</p>
+                </div>
+                <div class="js-show-hide__content padding-left--2 padding-right--2 padding-top--4 border-top--iron" style="overflow: auto;">
+                  <div>
+                  <img style="float:left;" class="" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="National Statistics logo"></div>
+                    <div class="padding-left--2" style="overflow:auto;"><p>Certified by the UK Statistics Authority as compliant with it Code of Practice for Official Statistics.<br>
+                    <a href="https://www.statisticsauthority.gov.uk/national-statistician/types-of-official-statistics/">Learn more</a></p></div>
+                  </div>
+              </div>
+            </div>
+
 
 
             <div class="js-show-hide">
@@ -222,7 +240,6 @@ title: "Crime in England and Wales: year ending December 2017"
                   <p><strong>Use of firearms</strong><br />If a firearm is fired, used as a blunt instrument, or used as a threat.</p>
                   <p><strong>Homicide</strong><br />Includes murder, manslaughter, corporate manslaughter and infanticide.</p>
                   <p><strong>Firearm discharge admissions </strong><br />Categories are: “assault by handgun discharge”, “assault by rifle, shotgun and larger firearm discharge” and “assault by other and unspecified firearm discharge.”</p>
-                  <p>Attempted offences are included in both “violence with injury” and “violence without injury” figures.</p>
                   </div>
               </div>
             </div>
@@ -241,7 +258,7 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
                 <details role="group" class="margin-bottom--2">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+                    <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
                       <p class="margin-top--0 margin-bottom--1">Police recorded crime is not a national statistic</p>
                     </div>
@@ -256,7 +273,7 @@ title: "Crime in England and Wales: year ending December 2017"
                 </div>
                 <details role="group" class="margin-bottom--2">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+                    <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
                       <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict.</p>
                     </div>
