--- a/sprint/26/weapons-crime/index.html
+++ b/sprint/26/weapons-crime/index.html
@@ -60,7 +60,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
             <br /></P>
             <div class="release-data">
             <p class="font-xsmall panel">
-            <span class="font-weight--bold">This is the latest release</span> |
+            <span class="font-weight--bold">This is part of the latest release</span> |
             <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall white-link">View previous releases</a>
           </p></div>
         </div>
@@ -166,29 +166,29 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all related data</a></p>
 
 
-                    <details role="group" class="margin-bottom--4 margin-top--1">
-                      <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                        <span class="summary">More about the data used in this bulletin
-                      </summary>
-                      <div class="panel" id="details-content-1" aria-hidden="false">
-                        <p>Further analysis on offences involving knives or sharp instruments and firearms can be found in <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/offencesinvolvingtheuseofweaponsdatatables">Offences involving the use of weapons: data tables</a>. This includes figures based on a broader definition of the types of firearm involved, such as air rifles.</p>
-                        <p>See <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/appendixtableshomicideinenglandandwales">Homicide in England and Wales: Appendix tables</a> for more information on homicides committed using a knife or sharp instrument.</p>
-                        <p class="margin-bottom--1">There are some other categories of Police Recorded Crime data which can be broken down by whether or not a firearm, knife or sharp instrument was involved.</p>
-                        <ul>
-                          <li>Homicide</li>
-                          <li>Attempted murder</li>
-                          <li>Threats to kill</li>
-                          <li>Assault with injury and assault with intent to cause serious harm</li>
-                          <li>Robbery</li>
-                          <li>Rape</li>
-                          <li>Sexual assault</li>
-                        </ul>
-                        <p>The <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2016">Focus on violent crime and sexual offences</a> publication includes data on offences involving a knife or sharp instrument going back to the year ending March 2009.</p>
-                        <p>A breakdown of offences for each police force and the time series for these data are published in the Home Office’s <a href="https://www.gov.uk/government/statistics/police-recorded-crime-open-data-tables">knife crime open data table</a>.</p>
-                        <p>Hospital admissions data are from <a href="http://webarchive.nationalarchives.gov.uk/20180328130140/http://digital.nhs.uk/catalogue/PUB22378"> NHS Hospital Admitted Patient Care Activity, 2015 to 2016</a> and <a href="https://digital.nhs.uk/data-and-information/publications/statistical/hospital-admitted-patient-care-activity/hospital-admitted-patient-care-activity-2016-17">NHS Hospital Admitted Patient Care Activity, 2016 to 2017</a>.</p>
-                        <p>Recently published data by <a href="http://webarchive.nationalarchives.gov.uk/20180328130140/http://digital.nhs.uk/catalogue/PUB22378">London’s Air Ambulance Data are from London’s Air Ambulance Mission Maps 2017</a>.</p>
-                      </div>
-                    </details>
+          <details role="group" class="margin-bottom--4 margin-top--1">
+            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+              <span class="summary">More about the data used in this bulletin</span>
+            </summary>
+            <div class="panel" id="details-content-1" aria-hidden="false">
+              <p>Further analysis on offences involving knives or sharp instruments and firearms can be found in <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/offencesinvolvingtheuseofweaponsdatatables">Offences involving the use of weapons: data tables</a>. This includes figures based on a broader definition of the types of firearm involved, such as air rifles.</p>
+              <p>See <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/appendixtableshomicideinenglandandwales">Homicide in England and Wales: Appendix tables</a> for more information on homicides committed using a knife or sharp instrument.</p>
+              <p class="margin-bottom--1">There are some other categories of Police Recorded Crime data which can be broken down by whether or not a firearm, knife or sharp instrument was involved.</p>
+              <ul>
+                <li>Homicide</li>
+                <li>Attempted murder</li>
+                <li>Threats to kill</li>
+                <li>Assault with injury and assault with intent to cause serious harm</li>
+                <li>Robbery</li>
+                <li>Rape</li>
+                <li>Sexual assault</li>
+              </ul>
+              <p>The <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2016">Focus on violent crime and sexual offences</a> publication includes data on offences involving a knife or sharp instrument going back to the year ending March 2009.</p>
+              <p>A breakdown of offences for each police force and the time series for these data are published in the Home Office’s <a href="https://www.gov.uk/government/statistics/police-recorded-crime-open-data-tables">knife crime open data table</a>.</p>
+              <p>Hospital admissions data are from <a href="http://webarchive.nationalarchives.gov.uk/20180328130140/http://digital.nhs.uk/catalogue/PUB22378"> NHS Hospital Admitted Patient Care Activity, 2015 to 2016</a> and <a href="https://digital.nhs.uk/data-and-information/publications/statistical/hospital-admitted-patient-care-activity/hospital-admitted-patient-care-activity-2016-17">NHS Hospital Admitted Patient Care Activity, 2016 to 2017</a>.</p>
+              <p>Recently published data by <a href="http://webarchive.nationalarchives.gov.uk/20180328130140/http://digital.nhs.uk/catalogue/PUB22378">London’s Air Ambulance Data are from London’s Air Ambulance Mission Maps 2017</a>.</p>
+            </div>
+          </details>
 
 
           <p class="margin-top--4">
@@ -297,7 +297,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                 </div>
                 <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+                    <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
                       <p class="margin-top--0 margin-bottom--1">As measured by the Crime Survey of England and Wales</p>
                     </div>
@@ -312,7 +312,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
                 </div>
                 <details role="group" class="margin-bottom--4 details-small">
                   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-                    <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+                    <span class="summary">What you need to know</span></summary>
                     <div class="panel" id="details-content-1" aria-hidden="false">
                       <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict.</p>
                     </div>
