Added in charts to test

--- a/sprint/26/fraud/index.html
+++ b/sprint/26/fraud/index.html
@@ -157,6 +157,16 @@ title: "Fraud in England and Wales: year ending December 2017"
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all related data</a></p>
 
+          <details role="group" class="margin-bottom--4 margin-top--1">
+            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+              <span class="summary">More about the data used in this bulletin</span>
+            </summary>
+            <div class="panel" id="details-content-1" aria-hidden="false">
+              <p>Fraud data is provided by Action Fraud – the public-facing national fraud and cybercrime reporting centre, as well as two industry bodies, Cifas and UK Finance, who report instances of fraud where their member organisations have been a victim.</p>
+              <p>Further information on each of the Fraud data sources and the differences between them can be found in Section 5.4 of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide</a> fand also in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">Overview of fraud and computer misuse statistics article</a>.</p>
+            </div>
+          </details>
+
           <p class="margin-top--4">
             <a href="#section-1">Back to top</a>
           </p>
@@ -208,9 +218,10 @@ title: "Fraud in England and Wales: year ending December 2017"
                     <li>“latest year” (or “latest survey year”) refers to the (survey) year ending December 2017</li>
                     <li>“previous year” (or “previous survey year”) refers to the (survey) year ending December 2016</li>
                   </ul>
-                  <p>In the year ending March 2017, the CSEW showed that more than half of violent crime victims (57%) did not report their experiences to the police. This was a return to levels seen preceding the year ending March 2013, following higher levels of reporting in the previous three years. </p>
-                  <p>In addition, police recorded crime statistics may be affected by changes in recording practices and police activity. While the CSEW gives us a good picture of the overall trend in violent crime, it is not good at measuring some types of violence.</p>
-                  <p>In these cases, police recorded crime is a useful source as the better measure of the higher-harm but less common types of violence.</p>
+                  <p>The Crime Survey for England and Wales (CSEW) provides the best indication of the volume of fraud offences directly experienced by people. CSEW estimates cover a wide range of fraud offences, including attempts and offences involving a loss, and include incidents not reported to the authorities. </p>
+                  <p>The number of incidents estimated by the CSEW is substantially higher than the number of incidents referred to the National Fraud Intelligence Bureau (NFIB), as the survey captures a large volume of lower-harm cases that are less likely to have been reported to the authorities.</p>
+                  <p>The CSEW suggests that less than one-fifth (17.3%) of incidents of fraud either come to the attention of the police or are reported by the victim to Action Fraud (Table E7, year ending March 2017).</p>
+                  <p>Action Fraud recorded lower than normal monthly volumes of fraud offences between July 2015 and April 2016, following the company contracted to provide the call centre service going into administration6. Volumes have recovered but because the lower-volume months form part of the comparator year (year ending December 2016), the latest figure will have been influenced by this issue, albeit to a lesser extent than seen previously.</p>
                   </div>
               </div>
             </div>
@@ -239,10 +250,11 @@ title: "Fraud in England and Wales: year ending December 2017"
                 <div class="js-show-hide__content padding-left--2 padding-right--2 padding-top--4 border-top--iron" style="overflow: auto;">
                   <p>A comprehensive guide to crime types and definitions can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">ONS User Guide</a></p>
 
-                  <p><strong>Violent crime</strong><br />WCovers a range of offence types from minor assaults, such as pushing and shoving that result in no physical harm, to murder. This includes offences where the victim was intentionally stabbed, punched, kicked, pushed or jostled, as well as offences where the victim was threatened with violence whether or not there is any injury.</p>
-                  <p>In published crime statistics, violent crime – both as measured by the Crime Survey for England and Wales (CSEW) and by police recorded crime – is grouped into two broad, high-level categories: “violence with injury” and “violence without injury”.</p>
-                  <p>However, these categories are not directly comparable between the CSEW and police recorded crime, and attempts to cause injury are categorised differently.</p>
-                  <p>In addition to the two broad categories, police recorded crime statistics present a separate category for homicide – such offences are not covered by the CSEW as it is a victim-based survey.</p>
+                  <p><strong>Fraud</strong><br />Fraud involves a person dishonestly and deliberately deceiving a victim for personal gain of property or money, or causing loss or risk of loss to another.</p>
+                  <p><strong>Fraud by false representation</strong><br />Where a person makes a representation that they know to be untrue or misleading. This covers a broad range of fraudulent activity, including dating scams (where the intended victim is befriended by a fraudster online and tricked into sending them money for a variety of emotive reasons), lottery scams (where the potential victim is told they have won a non-existent lottery prize and needs to pay a fee to release the winnings) and inheritance fraud (offering the false promise of an inheritance to trick victims into paying money or sharing bank or credit card details).</p>
+                  <p><strong>Banking and payment card frauds</strong><br />The most prevalent type of fraud, usually involving falsely obtaining or using personal bank or payment card details in order to carry out fraudulent transactions.</p>
+                  <p><strong>Computer misuse crime </strong><br />Covers any unauthorised access to computer material, as set out in the Computer Misuse Act 1990 (Annex 2 provides further information). This is not limited to desk or laptop computers and can include any device using operating software accessible online, for example, games consoles, smart phones and smart TVs. It includes offences such as the spread of viruses and other malicious software, hacking and distributed denial of service (DDoS) attacks (the flooding of internet servers to take down network infrastructure or websites).</p>
+
                   </div>
               </div>
             </div>
