--- a/sprint/26/weapons-crime/index.html
+++ b/sprint/26/weapons-crime/index.html
@@ -75,7 +75,7 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
           <div class="padding-right--2 padding-bottom--0 padding-left--2">
             <p class="heading-small">Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</p>
             <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
-            <iframe id="datawrapper-chart-cXkyA" src="//datawrapper.dwcdn.net/cXkyA/4/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="465"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["cXkyA"]={},window.datawrapper["cXkyA"].embedDeltas={"100":465,"200":465,"300":465,"400":465,"500":465,"700":465,"800":465,"900":465,"1000":465},window.datawrapper["cXkyA"].iframe=document.getElementById("datawrapper-chart-cXkyA"),window.datawrapper["cXkyA"].iframe.style.height=window.datawrapper["cXkyA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["cXkyA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("cXkyA"==b)window.datawrapper["cXkyA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+            <img style="width:100%" src="{{ "/assets/img/charts/weapons-highlight-1-lg.png" | relative_url }}" class="" alt="">
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
